@@ -50,9 +50,92 @@ RESULT hash_t2 (void)
 	return OK;
 }
 
+RESULT hash_default (void)
+{
+	GHashTable *hash = g_hash_table_new (NULL, NULL);
+
+	if (hash == NULL)
+		return FAILED ("g_hash_table_new should return a valid hash");
+
+	return NULL;
+}
+
+RESULT
+hash_null_lookup (void)
+{
+	GHashTable *hash = g_hash_table_new (NULL, NULL);
+	gpointer ok, ov;
+		
+	g_hash_table_insert (hash, NULL, GINT_TO_POINTER (1));
+	g_hash_table_insert (hash, GINT_TO_POINTER(1), GINT_TO_POINTER(2));
+
+	if (!g_hash_table_lookup_extended (hash, NULL, &ok, &ov))
+		return FAILED ("Did not find the NULL");
+	if (ok != NULL)
+		return FAILED ("Incorrect key found");
+	if (ov != GINT_TO_POINTER (1))
+		return FAILED ("Got wrong value %p\n", ov);
+
+	if (!g_hash_table_lookup_extended (hash, GINT_TO_POINTER(1), &ok, &ov))
+		return FAILED ("Did not find the 1");
+	if (ok != GINT_TO_POINTER(1))
+		return FAILED ("Incorrect key found");
+	if (ov != GINT_TO_POINTER (2))
+		return FAILED ("Got wrong value %p\n", ov);
+	
+	g_hash_table_destroy (hash);
+
+	return NULL;
+}
+
+static void
+counter (gpointer key, gpointer value, gpointer user_data)
+{
+	int *counter = (int *) user_data;
+
+	(*counter)++;
+}
+
+RESULT hash_grow (void)
+{
+	GHashTable *hash = g_hash_table_new_full (g_str_hash, g_str_equal, g_free, g_free);
+	int i, count = 0;
+	
+	for (i = 0; i < 1000; i++)
+		g_hash_table_insert (hash, g_strdup_printf ("%d", i), g_strdup_printf ("x-%d", i));
+
+	for (i = 0; i < 1000; i++){
+		char buffer [30];
+		gpointer value;
+		
+		sprintf (buffer, "%d", i);
+
+		value = g_hash_table_lookup (hash, buffer);
+		sprintf (buffer, "x-%d", i);
+		if (strcmp (value, buffer) != 0){
+			return FAILED ("Failed to lookup the key %d, the value was %s\n", i, value);
+		}
+	}
+
+	if (g_hash_table_size (hash) != 1000)
+		return FAILED ("Did not find 1000 elements on the hash, found %d\n", g_hash_table_size (hash));
+
+	/* Now do the manual count, lets not trust the internals */
+	g_hash_table_foreach (hash, counter, &count);
+	if (count != 1000){
+		return FAILED ("Foreach count is not 1000");
+	}
+
+	g_hash_table_destroy (hash);
+	return NULL;
+}
+
 static Test hashtable_tests [] = {
 	{"hash_t1", hash_t1},
 	{"hash_t2", hash_t2},
+	{"hash_grow", hash_grow},
+	{"hash_default", hash_default},
+	{"hash_null_lookup", hash_null_lookup},
 	{NULL, NULL}
 };
 
